@@ -58,16 +58,25 @@ abstract class TreeBuilder {
     protected abstract boolean process(Token token);
 
     protected boolean processStartTag(String name) {
+        if (currentToken == start) { // don't recycle an in-use token
+            return process(new Token.StartTag().name(name));
+        }
         return process(start.reset().name(name));
     }
 
     public boolean processStartTag(String name, Attributes attrs) {
+        if (currentToken == start) { // don't recycle an in-use token
+            return process(new Token.StartTag().nameAttr(name, attrs));
+        }
         start.reset();
         start.nameAttr(name, attrs);
         return process(start);
     }
 
     protected boolean processEndTag(String name) {
+        if (currentToken == end) { // don't recycle an in-use token
+            return process(new Token.EndTag().name(name));
+        }
         return process(end.reset().name(name));
     }
 
