@@ -1,0 +1,17 @@
+<html>
+<body>
+<table>
+  <tr>
+    <td>
+      <table>
+        <tr>
+          <!--Comment-->
+          <table>
+            <p>Why am I here?</p>
+            </tr>
+          </table>
+          </td>
+        </tr>
+      </table>
+</body>
+</html>
